syntax = "proto3";
package cosmos.bank.v2;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/query/v1/query.proto";
import "amino/amino.proto";
import "cosmos/bank/v2/bank.proto";

option go_package = "cosmossdk.io/x/bank/v2/types";

// Query defines the gRPC querier service.
service Query {
  // Params queries the parameters of x/bank module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (cosmos.query.v1.module_query_safe) = true;
    option (google.api.http).get               = "/cosmos/bank/v2/params";
  }
}

// QueryParamsRequest defines the request type for querying x/bank/v2 parameters.
message QueryParamsRequest {}

// QueryParamsResponse defines the response type for querying x/bank/v2 parameters.
message QueryParamsResponse {
  // params provides the parameters of the bank module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}